# lto-avoid

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: update-docs.md
src/lto_avoid/: __init__.py  grid.py  hil.py  optimize.py  sdf.py  trajectory.py  types.py
tests/: conftest.py  test_grid.py  test_hil.py  test_optimize.py  test_scenarios.py  test_sdf.py  test_trajectory.py  test_types.py
