[project]
name = "lto-avoid"
version = "0.1.0"
description = "Optimization-based local trajectory adjustment for obstacle avoidance"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "casadi>=3.6",
    "jaxtyping>=0.2.25",
    "beartype>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lto_avoid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
